--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: medflex
 Title: Flexible Mediation Analysis using Natural Effect Models
-Version: 0.4.0
-Date: 2014-12-10
+Version: 0.5-0
+Date: 2015-02-05
 Authors@R: c( person("Johan", "Steen", email = "johan.steen@gmail.com", role =
     c("aut", "cre")), person("Tom", "Loeys", email = "tom.loeys@ugent.be", role
     = "aut"), person("Beatrijs", "Moerkerke", email =
@@ -16,12 +16,14 @@ Description: medflex allows to run flexible mediation analyses using natural
     Buysse, Steen and Vansteelandt (2013).
 Depends: R (>= 3.1.2), multcomp (>= 1.3-6)
 License: GPL-2
+URL: https://github.com/jmpsteen/medflex
 LazyData: true
-Imports: boot (>= 1.3-8)
+Imports: boot (>= 1.3-8), Matrix (>= 1.1-4), sandwich (>= 2.3-2)
 Suggests: arm (>= 1.7-05), car (>= 2.0-21), gam (>= 1.09.1), glmnet (>=
-        1.9-8), Matrix (>= 1.1-4), rpart (>= 4.1-8), SuperLearner (>=
-        2.0-15), VGAM (>= 0.9-5)
-Packaged: 2014-12-10 23:05:29 UTC; johansteen
+        1.9-8), rpart (>= 4.1-8), SuperLearner (>= 2.0-15), VGAM (>=
+        0.9-5)
+NeedsCompilation: no
+Packaged: 2015-02-07 10:01:56 UTC; johansteen
 Author: Johan Steen [aut, cre],
   Tom Loeys [aut],
   Beatrijs Moerkerke [aut],
@@ -29,6 +31,5 @@ Author: Johan Steen [aut, cre],
   Joris Meys [ctb] (technical support),
   Theis Lange [ctb] (valuable suggestions)
 Maintainer: Johan Steen <johan.steen@gmail.com>
-NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2014-12-11 08:02:18
+Date/Publication: 2015-02-07 11:51:19
