--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,5 +37,7 @@ export(neLht)
 export(neModel)
 export(neWeight)
 export(plot.neLht)
+import(graphics)
 import(multcomp)
-importFrom(stats,weights)
+import(stats)
+import(utils)
