--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: medflex
-Title: Flexible Mediation Analysis using Natural Effect Models
-Version: 0.5-0
-Date: 2015-02-05
+Title: Flexible Mediation Analysis Using Natural Effect Models
+Version: 0.5-1
+Date: 2015-07-01
 Authors@R: c( person("Johan", "Steen", email = "johan.steen@gmail.com", role =
     c("aut", "cre")), person("Tom", "Loeys", email = "tom.loeys@ugent.be", role
     = "aut"), person("Beatrijs", "Moerkerke", email =
@@ -10,7 +10,7 @@ Authors@R: c( person("Johan", "Steen", email = "johan.steen@gmail.com", role =
     person("Joris", "Meys", email = "joris.meys@ugent.be", comment = "technical
     support", role = "ctb"), person("Theis", "Lange", email =
     "thlan@sund.ku.dk", comment = "valuable suggestions", role = "ctb"))
-Description: medflex allows to run flexible mediation analyses using natural
+Description: Run flexible mediation analyses using natural
     effect models as described in Lange, Vansteelandt and Bekaert (2012),
     Vansteelandt, Bekaert and Lange (2012) and Loeys, Moerkerke, De Smet,
     Buysse, Steen and Vansteelandt (2013).
@@ -18,12 +18,13 @@ Depends: R (>= 3.1.2), multcomp (>= 1.3-6)
 License: GPL-2
 URL: https://github.com/jmpsteen/medflex
 LazyData: true
-Imports: boot (>= 1.3-8), Matrix (>= 1.1-4), sandwich (>= 2.3-2)
+Imports: boot (>= 1.3-8), Matrix (>= 1.1-4), graphics (>= 3.1.2),
+        sandwich (>= 2.3-2), stats (>= 3.1.2), utils (>= 3.1.2)
 Suggests: arm (>= 1.7-05), car (>= 2.0-21), gam (>= 1.09.1), glmnet (>=
         1.9-8), rpart (>= 4.1-8), SuperLearner (>= 2.0-15), VGAM (>=
         0.9-5)
 NeedsCompilation: no
-Packaged: 2015-02-07 10:01:56 UTC; johansteen
+Packaged: 2015-07-01 14:05:46 UTC; johansteen
 Author: Johan Steen [aut, cre],
   Tom Loeys [aut],
   Beatrijs Moerkerke [aut],
@@ -32,4 +33,4 @@ Author: Johan Steen [aut, cre],
   Theis Lange [ctb] (valuable suggestions)
 Maintainer: Johan Steen <johan.steen@gmail.com>
 Repository: CRAN
-Date/Publication: 2015-02-07 11:51:19
+Date/Publication: 2015-07-01 16:08:34
